# asetto-coacha

./: .gitignore  README.md  build.sh  pyproject.toml  start.sh
.claude/: settings.local.json
config/: default.toml
desktop/: main.js  package.json  preload.js
samples/: imola_&_ks_mercedes_amg_gt3_&_ralphzhao51_&_stint_1.ld  imola_&_ks_mercedes_amg_gt3_&_ralphzhao51_&_stint_1.ldx
src/racing_coach/: config.py  importer.py  main.py
src/racing_coach/analysis/: comparator.py  corner_detector.py  lap_parser.py  metrics.py  scoring.py
src/racing_coach/api/: app.py  deps.py
src/racing_coach/api/routes/: analysis.py  coaching.py  live.py  sessions.py  telemetry.py
src/racing_coach/coach/: coach.py  llm_client.py  prompt_builder.py
src/racing_coach/coach/templates/: lap_analysis.j2
src/racing_coach/collectors/: ac_shared_memory.py  base.py  mock.py  models.py  motec_ld.py  recorder.py
src/racing_coach/storage/: models.py  session_store.py  telemetry_store.py
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  index.css  plotly.tsx
ui/src/components/: CoachingCard.tsx  CompareChart.tsx  CornerCards.tsx  ScoreCard.tsx  StatsBar.tsx  TelemetryChart.tsx
ui/src/pages/: LapView.tsx  SessionDetail.tsx  SessionList.tsx
