[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "racing-coach"
version = "0.1.0"
description = "Racing telemetry analysis and AI coaching for Assetto Corsa / ACC"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pyarrow>=14.0.0",
    "anthropic>=0.40.0",
    "jinja2>=3.1.0",
    "tomli>=2.0.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
racing-coach = "racing_coach.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/racing_coach"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
